/*
  Party Routing Profile

  This service domain maintains a small profile of key indicators for a customer that is referenced during customer interactions to facilitate routing, servicing and product/service fulfillment decisions. This can include status (such as account in arrears), ratings (such as high value customer) and alerts (such possible fraud activity detected)

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.partyroutingprofile.v10.api.bqalertservice;

import "google/protobuf/empty.proto";
import public "v10/model/capture_alert_request.proto";
import public "v10/model/capture_alert_response.proto";
import public "v10/model/http_error.proto";
import public "v10/model/retrieve_alert_response.proto";
import public "v10/model/update_alert_request.proto";
import public "v10/model/update_alert_response.proto";

service BQAlertService {
  rpc CaptureAlert (CaptureAlertRequest) returns (CaptureAlertResponse);

  rpc RetrieveAlert (RetrieveAlertRequest) returns (RetrieveAlertResponse);

  rpc UpdateAlert (UpdateAlertRequest) returns (UpdateAlertResponse);

}

message CaptureAlertRequest {
  string partyroutingprofileId = 1;
  string alertId = 2;
  CaptureAlertRequest captureAlertRequest = 3;

}

message RetrieveAlertRequest {
  string partyroutingprofileId = 1;
  string alertId = 2;

}

message UpdateAlertRequest {
  string partyroutingprofileId = 1;
  string alertId = 2;
  UpdateAlertRequest updateAlertRequest = 3;

}

