/*
  Party Routing Profile

  This service domain maintains a small profile of key indicators for a customer that is referenced during customer interactions to facilitate routing, servicing and product/service fulfillment decisions. This can include status (such as account in arrears), ratings (such as high value customer) and alerts (such possible fraud activity detected)

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.partyroutingprofile.v10.api.bqratingservice;

import "google/protobuf/empty.proto";
import public "v10/model/capture_rating_request.proto";
import public "v10/model/capture_rating_response.proto";
import public "v10/model/http_error.proto";
import public "v10/model/retrieve_rating_response.proto";
import public "v10/model/update_rating_request.proto";
import public "v10/model/update_rating_response.proto";

service BQRatingService {
  rpc CaptureRating (CaptureRatingRequest) returns (CaptureRatingResponse);

  rpc RetrieveRating (RetrieveRatingRequest) returns (RetrieveRatingResponse);

  rpc UpdateRating (UpdateRatingRequest) returns (UpdateRatingResponse);

}

message CaptureRatingRequest {
  string partyroutingprofileId = 1;
  string ratingId = 2;
  CaptureRatingRequest captureRatingRequest = 3;

}

message RetrieveRatingRequest {
  string partyroutingprofileId = 1;
  string ratingId = 2;

}

message UpdateRatingRequest {
  string partyroutingprofileId = 1;
  string ratingId = 2;
  UpdateRatingRequest updateRatingRequest = 3;

}

