/*
  Party Routing Profile

  This service domain maintains a small profile of key indicators for a customer that is referenced during customer interactions to facilitate routing, servicing and product/service fulfillment decisions. This can include status (such as account in arrears), ratings (such as high value customer) and alerts (such possible fraud activity detected)

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.partyroutingprofile.v10.api.crpartystateservice;

import "google/protobuf/empty.proto";
import public "v10/model/http_error.proto";
import public "v10/model/party_state.proto";

service CRPartyStateService {
  rpc Execute (ExecuteRequest) returns (ExecuteResponse);

  rpc Initiate (InitiateRequest) returns (InitiateResponse);

  rpc Request (RequestRequest) returns (RequestResponse);

  rpc Retrieve (RetrieveRequest) returns (PartyState);

  rpc Update (UpdateRequest) returns (PartyState);

}

message ExecuteRequest {
  string partyroutingprofileId = 1;
  PartyState partyState = 2;

}

message ExecuteResponse {
  bool data = 1;
}

message InitiateRequest {
  PartyState partyState = 1;

}

message InitiateResponse {
  bool data = 1;
}

message RequestRequest {
  string partyroutingprofileId = 1;
  PartyState partyState = 2;

}

message RequestResponse {
  bool data = 1;
}

message RetrieveRequest {
  string partyroutingprofileId = 1;

}

message UpdateRequest {
  string partyroutingprofileId = 1;
  PartyState partyState = 2;

}

